# prompt-compressor

./: .dockerignore  .gcloudignore  .gitignore  DEPLOYMENT_SETUP.md  Dockerfile  README.md  bench_compression.py  bench_suite.py  cloudbuild.yaml  deploy.sh  docker-compose.yml  main.py  proxy.py  pyproject.toml  requirements.txt  run.sh
.github/workflows/: deploy.yml
results/: compression_results.json
results/squad_completion/: compression_results.json
results/triviaqa/: compression_results.json
