[project]
name = "openai-proxy"
version = "0.1.0"
description = "Basic transparent proxy to OpenAI API"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "httpx>=0.25.0",
    "python-multipart>=0.0.6",
    "tiktoken>=0.5.0",
    "functions-framework>=3.2.0",
    "flask>=2.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
] 